--- a/netlify.toml
+++ b/netlify.toml
@@ -2,15 +2,14 @@
   functions = "netlify/functions"
   publish = "public"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [functions]
   node_bundler = "esbuild"
 
+# Sadece /api/* yönlendir - diğer her şey normal çalışsın
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/api"
   status = 200
