--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "haremaltin-api",
   "version": "2.0.0",
-  "description": "Harem Altın API",
+  "description": "Harem Altın API - Netlify Optimized",
   "main": "netlify/functions/api.js",
   "scripts": {
-    "start": "netlify dev"
+    "start": "netlify dev",
+    "deploy": "netlify deploy --prod"
   },
-  "keywords": ["haremaltin", "altin", "api"],
+  "keywords": ["haremaltin", "altin", "api", "netlify"],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "querystring": "^0.2.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
